Successfully upgraded to Java17